[package]
name = "custom-identity-wallet"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "custom_identity_wallet"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.0.0-alpha.11", features = [] }

[dependencies]
tauri = { version = "=2.0.0-alpha.17", features = ["rustls-tls"] }
tauri-plugin-barcode-scanner = "=2.0.0-alpha.2"
tauri-plugin-clipboard-manager = "=2.0.0-alpha.4"
tauri-plugin-log = { version = "=2.0.0-alpha.4", features = ["colored"] }
identity-wallet = { git = "https://git@github.com/impierce/identity-wallet.git", branch = "temp/headless-fix" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
